--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
+        "league/flysystem-aws-s3-v3": "~1.0",
         "realrashid/sweet-alert": "^3.2",
         "spatie/laravel-permission": "^3.18",
         "spatie/laravel-query-builder": "^3.3",
