--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "realrashid/sweet-alert": "^3.2",
         "spatie/laravel-permission": "^3.18",
         "spatie/laravel-query-builder": "^3.3",
-        "spatie/laravel-translatable": "^4.6"
+        "spatie/laravel-translatable": "^4.6",
+        "wildbit/postmark-php": "^4.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
