--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "~1.0",
         "realrashid/sweet-alert": "^3.2",
+        "spatie/laravel-analytics": "^3.11",
         "spatie/laravel-permission": "^3.18",
         "spatie/laravel-query-builder": "^3.3",
         "spatie/laravel-translatable": "^4.6",
