--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.4|^8.0",
         "apichef/laravel-obfuscate": "^2.0",
         "apichef/laravel-pay-here": "^2.0",
+        "bensampo/laravel-embed": "^1.3",
         "doctrine/dbal": "^3.1",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
